# xlwings_query

./: LICENSE  README.md  pylintrc  requirements.txt  sample.py  setup.cfg
src/: filters.py  xl.py  xlwings_query.py
