[metadata]
name = xlwings_query_gkarak
version = 0.0.1
author = George Karakostas
author_email = gkarak@9-dev.com
description = Import, connect and transform data into Excel.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Wtower/xlwings_query
project_urls =
    Bug Tracker = https://github.com/Wtower/xlwings_query/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    xlwings
    pandas

[options.packages.find]
where = src